Tweak settings, create some initial notes

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,15 @@
   "showLineNumber": false,
   "attachmentFolderPath": "./",
   "newFileLocation": "current",
-  "promptDelete": false
+  "promptDelete": false,
+  "trashOption": "local",
+  "legacyEditor": false,
+  "pdfExportSettings": {
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  },
+  "readableLineLength": false,
+  "lineWrap": false
 }
