--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -12,6 +12,8 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "readableLineLength": false,
-  "lineWrap": false
+  "readableLineLength": true,
+  "lineWrap": false,
+  "autoPairMarkdown": false,
+  "alwaysUpdateLinks": true
 }
