--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,5 @@
 **/*.md linguist-vendored=false
 **/*.md linguist-generated=false
 **/*.md linguist-documentation=false
+**/*.md linguist-detectable=true
 README.md linguist-detectable=false
